updated the swagger documentation and added some delete routes
